tests/fixtures/invalid/hex_float.py
# Cannot call hex() with Float
x = hex(1.0)
